--- a/src/Makefile
+++ b/src/Makefile
@@ -83,7 +83,7 @@ CSRC = $(PORTSRC) \
        $(CRYPTSRC) \
        main.c debug.c usb_lld.c \
 	hw_config.c usb_desc.c usb_prop.c \
-	usb-icc.c gpg.c ac.c openpgp-do.c flash.c
+	usb-icc.c openpgp.c ac.c openpgp-do.c flash.c hardclock.c
 
 # List ASM source files here
 ASMSRC = $(PORTASM) \
