--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -91,7 +91,7 @@ CSRC = $(PORTSRC) \
        main.c usb_lld.c \
 	usb_desc.c usb_prop.c \
 	usb-icc.c openpgp.c ac.c openpgp-do.c flash.c hardclock.c \
-	random.c neug.c
+	random.c neug.c bn.c modp256.c jpc.c mod.c ec_p256.c
 
 ifneq ($(ENABLE_DEBUG),)
 CSRC += debug.c
