add alignment for gnuk.ld.in, add ChangeLog entries.

--- a/src/gnuk.ld.in
+++ b/src/gnuk.ld.in
@@ -128,6 +128,7 @@ SECTIONS
 
     .gnuk_flash :
     {
+        . = ALIGN (@FLASH_PAGE_SIZE@);
 	_data_pool = .;
 	KEEP(*(.gnuk_data))
 	. = ALIGN(@FLASH_PAGE_SIZE@);
