--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -213,4 +213,4 @@ include $(CHIBIOS)/os/ports/GCC/ARM/rules.mk
 MCFLAGS= -mcpu=$(MCU) -mfix-cortex-m3-ldrd
 
 distclean: clean
-	-rm -f Makefile gnuk.ld config.h
+	-rm -f Makefile gnuk.ld config.h *.inc
