--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -91,7 +91,7 @@ CSRC = $(PORTSRC) \
        $(CRYPTSRC) \
        main.c usb_lld.c \
 	usb_desc.c usb_prop.c \
-	usb-icc.c openpgp.c ac.c openpgp-do.c flash.c hardclock.c \
+	usb-icc.c openpgp.c ac.c openpgp-do.c flash.c \
 	random.c neug.c
 
 ifneq ($(ENABLE_DEBUG),)
