revice system service, version string

--- a/src/gnuk.ld.in
+++ b/src/gnuk.ld.in
@@ -54,6 +54,8 @@ SECTIONS
     {
         _sys = .;
         KEEP(*(.vectors))
+	. = ALIGN(16);
+	*(.sys.version)
 	sys.o(.text)
 	sys.o(.text.*)
         sys.o(.rodata)
