--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -175,7 +175,7 @@ DLIBS =
 #
 
 # List all user C define here, like -D_DEBUG=1
-UDEFS =
+UDEFS = @KEYGEN_SUPPORT@
 
 # Define ASM defines here
 UADEFS =
