--- a/regnual/Makefile
+++ b/regnual/Makefile
@@ -2,7 +2,6 @@
 
 PROJECT = regnual
 
-SRCS = regnual.c usb_lld.c sys.c
 OBJS = regnual.o usb_lld.o sys.o
 LDSCRIPT= regnual.ld
 
@@ -23,7 +22,7 @@ MCFLAGS= -mcpu=$(MCU) -mfix-cortex-m3-ldrd
 DEFS = -DFREE_STANDING
 
 CFLAGS = -O2 -g
-CFLAGS += $(CWARN) -I ../src -fno-common $(MCFLAGS) $(TOPT) $(DEFS)
+CFLAGS += $(CWARN) -I . -I ../src -fno-common $(MCFLAGS) $(TOPT) $(DEFS)
 
 LDFLAGS = -T$(LDSCRIPT) -nostartfiles $(MCFLAGS) $(TOPT)
 
@@ -38,8 +37,8 @@ regnual.hex: regnual.elf
 	$(OBJCOPY) -Obinary regnual.elf regnual.bin
 	$(OBJCOPY) -Oihex regnual.elf regnual.hex
 
-usb_lld.c: ../src/usb_lld.c
-	cp -p ../src/usb_lld.c .
+usb_lld.o: ../src/usb_lld.c
+	$(CC) $(CFLAGS) -c -o usb_lld.o ../src/usb_lld.c
 
 regnual.elf: $(OBJS) $(LDSCRIPT)
 	$(CC) $(LDFLAGS) -o regnual.elf $(OBJS)
@@ -48,4 +47,3 @@ clean:
 	-rm -f $(OBJS) regnual.elf regnual.hex regnual.bin
 
 distclean: clean
-	-rm -f usb_lld.c
