--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -29,9 +29,9 @@ ifeq ($(USE_THUMB),)
   USE_THUMB = yes
 endif
 
-# Enable register caching optimization (read documentation).
-ifeq ($(USE_CURRP_CACHING),)
-  USE_CURRP_CACHING = no
+# Enable this if you want to see the full log while compiling.
+ifeq ($(USE_VERBOSE_COMPILE),)
+  USE_VERBOSE_COMPILE = no
 endif
 
 #
@@ -58,16 +58,16 @@ endif
 # Define project name here
 PROJECT = gnuk
 
-# Define linker script file here
-LDSCRIPT= gnuk.ld
-
 # Imported source files
-CHIBIOS = ../ChibiOS_2.0.8
-include $(CHIBIOS)/os/hal/platforms/STM32/platform.mk
+CHIBIOS = ../chibios
+include $(CHIBIOS)/os/hal/platforms/STM32F1xx/platform.mk
 include $(CHIBIOS)/os/hal/hal.mk
-include $(CHIBIOS)/os/ports/GCC/ARMCMx/STM32F10x/port.mk
+include $(CHIBIOS)/os/ports/GCC/ARMCMx/STM32F1xx/port.mk
 include $(CHIBIOS)/os/kernel/kernel.mk
 include crypt.mk
+
+# Define linker script file here
+LDSCRIPT= gnuk.ld
 
 # C sources that can be compiled in ARM or THUMB mode depending on the global
 # setting.
@@ -76,11 +76,12 @@ CSRC = $(PORTSRC) \
        $(HALSRC) \
        $(PLATFORMSRC) \
        $(BOARDSRC) \
+       ../boards/common/board-common.c \
        $(BOARD_DIR)/board.c \
        $(CHIBIOS)/os/various/evtimer.c \
        $(CHIBIOS)/os/various/syscalls.c \
        $(CRYPTSRC) \
-       main.c usb_lld.c \
+       main.c usb_stm32f103.c adc_stm32f103.c \
 	usb_desc.c usb_ctrl.c \
 	usb-icc.c openpgp.c ac.c openpgp-do.c flash.c \
 	random.c neug.c sys.c
@@ -98,8 +99,7 @@ CSRC += usb-msc.c
 endif
 
 # List ASM source files here
-ASMSRC = $(PORTASM) \
-         $(CHIBIOS)/os/ports/GCC/ARMCMx/STM32F10x/vectors.s
+ASMSRC = $(PORTASM)
 
 INCDIR = $(CRYPTINCDIR) \
 	 $(PORTINC) $(KERNINC) $(TESTINC) \
@@ -152,7 +152,7 @@ CPPWARN = -Wall -Wextra
 #
 
 # List all default C defines here, like -D_DEBUG=1
-DDEFS = -DCORTEX_USE_BASEPRI=TRUE
+DDEFS =
 
 # List all default ASM defines here, like -D_DEBUG=1
 DADEFS =
@@ -193,7 +193,7 @@ ULIBS =
 # End of user defines
 ##############################################################################
 
-include $(CHIBIOS)/os/ports/GCC/ARM/rules.mk
+include $(CHIBIOS)/os/ports/GCC/ARMCMx/rules.mk
 MCFLAGS= -mcpu=$(MCU) -mfix-cortex-m3-ldrd
 
 distclean: clean
