--- a/src/gnuk.ld.in
+++ b/src/gnuk.ld.in
@@ -29,12 +29,11 @@
  */
 __main_stack_size__     = 0x0400;
 __process_stack_size__  = 0x0200;
-__stacks_total_size__   = __main_stack_size__ + __process_stack_size__;
 
 MEMORY
 {
-    flash0 : org = @ORIGIN@, len = 4k
-    flash  : org = @ORIGIN@+0x1000, len = @FLASH_SIZE@k - 4k
+    flash0 : org = 0x08000000, len = 4k
+    flash  : org = 0x08000000+0x1000, len = 128k - 4k
     ram : org = 0x20000000, len = 20k
 }
 
@@ -56,20 +55,43 @@ SECTIONS
         KEEP(*(.vectors))
 	. = ALIGN(16);
 	*(.sys.version)
-	sys.o(.text)
-	sys.o(.text.*)
-        sys.o(.rodata)
-	sys.o(.rodata.*)
+	*/sys.o(.text)
+	*/sys.o(.text.*)
+        */sys.o(.rodata)
+	*/sys.o(.rodata.*)
 	. = ALIGN(1024);
 	*(.sys.0)
 	*(.sys.1)
 	*(.sys.2)
     } > flash0
 
+    _text = .;
+
+    startup : ALIGN(16) SUBALIGN(16)
+    {
+        KEEP(*(vectors))
+        . = ALIGN (16);
+    } > flash =0xffffffff
+
+    constructors : ALIGN(4) SUBALIGN(4)
+    {
+        PROVIDE(__init_array_start = .);
+        KEEP(*(SORT(.init_array.*)))
+        KEEP(*(.init_array))
+        PROVIDE(__init_array_end = .);
+    } > flash
+
+    destructors : ALIGN(4) SUBALIGN(4)
+    {
+        PROVIDE(__fini_array_start = .);
+        KEEP(*(.fini_array))
+        KEEP(*(SORT(.fini_array.*)))
+        PROVIDE(__fini_array_end = .);
+    } > flash
+
     .text : ALIGN(16) SUBALIGN(16)
     {
-        _text = .;
-        KEEP(*(vectors))
+        *(.text.startup.*)
         *(.text)
         *(.text.*)
         *(.rodata)
@@ -79,64 +101,70 @@ SECTIONS
         *(.gcc*)
     } > flash
 
-    .ctors :
-    {
-        PROVIDE(_ctors_start_ = .);
-        KEEP(*(SORT(.ctors.*)))
-        KEEP(*(.ctors))
-        PROVIDE(_ctors_end_ = .);
-    } > flash
+    .ARM.extab : {*(.ARM.extab* .gnu.linkonce.armextab.*)} > flash
 
-    .dtors :
-    {
-        PROVIDE(_dtors_start_ = .);
-        KEEP(*(SORT(.dtors.*)))
-        KEEP(*(.dtors))
-        PROVIDE(_dtors_end_ = .);
-    } > flash
+    .ARM.exidx : {
+        PROVIDE(__exidx_start = .);
+        *(.ARM.exidx* .gnu.linkonce.armexidx.*)
+        PROVIDE(__exidx_end = .);
+     } > flash
 
-    .ARM.extab : {*(.ARM.extab* .gnu.linkonce.armextab.*)}
+    .eh_frame_hdr : {*(.eh_frame_hdr)} > flash
 
-    __exidx_start = .;
-    .ARM.exidx : {*(.ARM.exidx* .gnu.linkonce.armexidx.*)} > flash
-    __exidx_end = .;
+    .eh_frame : ONLY_IF_RO {*(.eh_frame)} > flash
 
-    .eh_frame_hdr : {*(.eh_frame_hdr)}
+    .textalign : ONLY_IF_RO { . = ALIGN(8); } > flash
 
-    .eh_frame : ONLY_IF_RO {*(.eh_frame)}
-
-    . = ALIGN(4);
     _etext = .;
     _textdata = _etext;
 
+    .stacks :
+    {
+        . = ALIGN(8);
+        __main_stack_base__ = .;
+        . += __main_stack_size__;
+        . = ALIGN(8);
+        __main_stack_end__ = .;
+        __process_stack_base__ = .;
+        __main_thread_stack_base__ = .;
+        . += __process_stack_size__;
+        . = ALIGN(8);
+        __process_stack_end__ = .;
+        __main_thread_stack_end__ = .;
+    } > ram
+
     .data :
     {
-        _data = .;
+        . = ALIGN(4);
+        PROVIDE(_data = .);
         *(.data)
         . = ALIGN(4);
         *(.data.*)
         . = ALIGN(4);
         *(.ramtext)
         . = ALIGN(4);
-        _edata = .;
+        PROVIDE(_edata = .);
     } > ram AT > flash
 
     .bss :
     {
-        _bss_start = .;
+        . = ALIGN(4);
+        PROVIDE(_bss_start = .);
         *(.bss)
         . = ALIGN(4);
         *(.bss.*)
         . = ALIGN(4);
         *(COMMON)
         . = ALIGN(4);
-        _bss_end = .;
+        PROVIDE(_bss_end = .);
     } > ram
 
     PROVIDE(end = .);
     _end            = .;
     . = ALIGN(512);
+
     _regnual_start = .;
+    /* It was __ram_start__ + 0x1a00 in 1.0.x */
 
 @CERTDO_SUPPORT_START@
     .gnuk_ch_certificate :
@@ -166,4 +194,4 @@ SECTIONS
 }
 
 __heap_base__   = _end;
-__heap_end__    = __ram_end__ - __stacks_total_size__;
+__heap_end__    = __ram_end__;
