--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,7 @@ src/.dep
 src/Makefile
 src/config.h
 src/gnuk.ld
-src/gnuk.bin
-src/gnuk.dmp
-src/gnuk.elf
-src/gnuk.hex
-src/gnuk.map
+src/build/*
 src/*.inc
 regnual/regnual.bin
 regnual/regnual.hex
