--- a/src/gnuk.ld.in
+++ b/src/gnuk.ld.in
@@ -33,7 +33,7 @@ __process_stack_size__  = 0x0200;
 MEMORY
 {
     flash0 : org = @ORIGIN@, len = 4k
-    flash  : org = @ORIGIN@+0x1000, len = @FLASH_SIZE@ - 4k
+    flash  : org = @ORIGIN@+0x1000, len = @FLASH_SIZE@k - 4k
     ram : org = 0x20000000, len = @MEMORY_SIZE@k
 }
 
