--- a/src/gnuk.ld.in
+++ b/src/gnuk.ld.in
@@ -141,6 +141,7 @@ SECTIONS
         PROVIDE(_bss_end = .);
     } > ram
 
+    . = ALIGN(16);
     PROVIDE(end = .);
     _end            = .;
     . = ALIGN(512);
