--- a/src/gnuk.ld.in
+++ b/src/gnuk.ld.in
@@ -167,7 +167,11 @@ SECTIONS
         . = ALIGN(@FLASH_PAGE_SIZE@);
         . += @FLASH_PAGE_SIZE@;
         _keystore_pool = .;
-        . += 512*3;
+        . += 512;
+        . = ALIGN(@FLASH_PAGE_SIZE@);
+        . += 512;
+        . = ALIGN(@FLASH_PAGE_SIZE@);
+        . += 512;
         . = ALIGN(@FLASH_PAGE_SIZE@);
         _updatekey_store = .;
         . += 1024;
