--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "chopstx"]
 	path = chopstx
-	url = git@gitorious.org:chopstx/chopstx.git
+	url = chopstx.git
+#
+# url = git@gitorious.org:chopstx/chopstx.git
+#
