--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -11,7 +11,7 @@ LDSCRIPT= gnuk.ld
 CSRC = main.c usb_stm32f103.c adc_stm32f103.c \
 	usb_desc.c usb_ctrl.c \
 	call-rsa.c \
-	usb-icc.c openpgp.c ac.c openpgp-do.c flash.c \
+	usb-ccid.c openpgp.c ac.c openpgp-do.c flash.c \
 	bn.c mod.c \
 	modp256r1.c jpc_p256r1.c ec_p256r1.c call-ec_p256r1.c \
 	modp256k1.c jpc_p256k1.c ec_p256k1.c call-ec_p256k1.c \
