--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "chopstx"]
 	path = chopstx
-	url =  git://git.gniibe.org/chopstx/chopstx.git
+	url =  git@github.com:Nitrokey/chopstx.git
