--- a/src/gnuk.ld.in
+++ b/src/gnuk.ld.in
@@ -3,7 +3,7 @@
  */
 __main_stack_size__      = 0x0080;      /* Exception handlers     */
 __process0_stack_size__  = 0x0100;      /* main */
-__process1_stack_size__  = 0x0180;      /* ccid */
+__process1_stack_size__  = 0x01a0;      /* ccid */
 __process2_stack_size__  = 0x0180;      /* rng */
 __process3_stack_size__  = 0x1640;      /* gpg */
 __process4_stack_size__  = 0;           /* --- */
