usbip list -r 127.0.0.1 now works.
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>

--- a/emulation/Makefile
+++ b/emulation/Makefile
@@ -1,4 +1,4 @@
-SRCS = usbip-server.c usb-emu.c
+SRCS = usbip-server.c usb-emu.c glue.c
 OBJS = $(SRCS:.c=.o)
 TARGET=gnuk_emulation
 GNUKDIR=../src
